{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 60,
  "lineage": "ae2a4844-80db-14f4-b5b2-a6bd030a7253",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:812080670811:internet-gateway/igw-0d97d6acaadf5e3c4",
            "id": "igw-0d97d6acaadf5e3c4",
            "owner_id": "812080670811",
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "vpc_id": "vpc-0775948ca2b5a838c"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03e49b44084839aeb",
            "owner_id": "812080670811",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d97d6acaadf5e3c4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0775948ca2b5a838c"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072ee8fda0c2e8cf4",
            "route_table_id": "rtb-03e49b44084839aeb",
            "subnet_id": "subnet-070e4c934292e470f"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.demo",
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd6dfb1101a33e48",
            "route_table_id": "rtb-03e49b44084839aeb",
            "subnet_id": "subnet-0276cc77a0af8abeb"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.demo",
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:812080670811:security-group/sg-01eabe4b909a6ad1d",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01eabe4b909a6ad1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "117.197.179.149/32"
                ],
                "description": "Allow workstation to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-eks-demo-cluster",
            "name_prefix": "",
            "owner_id": "812080670811",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0775948ca2b5a838c"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "117.197.179.149/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1847044676",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01eabe4b909a6ad1d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.demo-cluster",
            "aws_vpc.demo",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:812080670811:subnet/subnet-070e4c934292e470f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.100.0.0/24",
            "id": "subnet-070e4c934292e470f",
            "map_public_ip_on_launch": true,
            "owner_id": "812080670811",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/EKS-SHA-Cluster": "shared"
            },
            "vpc_id": "vpc-0775948ca2b5a838c"
          },
          "dependencies": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:812080670811:subnet/subnet-0276cc77a0af8abeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.100.1.0/24",
            "id": "subnet-0276cc77a0af8abeb",
            "map_public_ip_on_launch": true,
            "owner_id": "812080670811",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/EKS-SHA-Cluster": "shared"
            },
            "vpc_id": "vpc-0775948ca2b5a838c"
          },
          "dependencies": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:812080670811:vpc/vpc-0775948ca2b5a838c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-012ca3386590b1185",
            "default_route_table_id": "rtb-0ea3327c61c9bfacc",
            "default_security_group_id": "sg-0031f041216fa7236",
            "dhcp_options_id": "dopt-9ab7fbf3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0775948ca2b5a838c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ea3327c61c9bfacc",
            "owner_id": "812080670811",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/EKS-SHA-Cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}